@@ -834,12 +834,10 @@ function workflow_node_previous_state($entity, $entity_type = 'node', $field_nam
  *
  * Caveat: gives undefined results with multiple workflows per entity.
  * @todo: support multiple workflows per entity.
- * @todo: remove usage of WorkflowItem.
  */
 function workflow_get_workflows_by_type($entity_bundle, $entity_type = 'node') {
   static $map = array();
   $wid = 0;
-  $field_item = NULL;
 
   if (!isset($map[$entity_type][$entity_bundle])) {
     // Check the Node API first: Get $wid.
@@ -852,15 +850,6 @@ function workflow_get_workflows_by_type($entity_bundle, $entity_type = 'node') {
     if (!$wid && isset($entity_type)) {
       foreach (_workflow_info_fields(NULL, $entity_type) as $field_name => $field_info) {
         $wid = $field_info['settings']['wid'];
-        if (isset($field_info['bundles'][$entity_type])) {
-          foreach($field_info['bundles'][$entity_type] as $bundle_name) {
-            if ($bundle_name == $entity_bundle) {
-              // @todo: $entity_bundle should be part of the WorkflowItem constructor, too.
-              $field_instance = field_info_instance($entity_type, $field_name, $bundle_name);
-              $field_item = new WorkflowItem($field_info, $field_instance);
-            }
-          }
-        }
       }
     }
 
@@ -868,13 +857,8 @@ function workflow_get_workflows_by_type($entity_bundle, $entity_type = 'node') {
     $map[$entity_type][$entity_bundle] = FALSE;
     if ($wid) {
       $workflow = workflow_load_single($wid);
-
-      // Load the WorkflowItem on the Workflow, for later reference.
-      $workflow->getWorkflowItem($field_item);
-
       $map[$entity_type][$entity_bundle] = $workflow;
     }
-
   }
 
   return $map[$entity_type][$entity_bundle];
